discussion/kv_engine/168657/168657_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Regenerate testapp certificates

Include a DNS.1 entry used by the go client

Change-Id: Idbccef3941f04b3323e83b2ebf1c5723372f2f55

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-01-13 08:43:01.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-13 09:07:10.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14787/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_cert_tests.cc:266:18: error: incomplete type "ProcessMonitor" named in nested name specifier [clang-diagnostic-error]
    auto child = ProcessMonitor::create(argv, [&status, &json](auto& ec) {
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp.h:55:7: note: forward declaration of "ProcessMonitor"
class ProcessMonitor;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14787/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_cert_tests.cc:266:18:
error: incomplete type "ProcessMonitor" named in nested name specifier [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14787/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17540/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4433/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4433/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15594/ : FAILURE

Compile error at [2022-01-13T08:44:32.762Z] _cgo_export.c:3:10:
fatal error: "stdlib.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15594/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24867/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24867/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13633/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42772/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36243/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16743/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16453/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4491/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-01-13 12:57:27.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
